#cmake_minimum_required(VERSION 3.5)
#add_executable(lab-4-dynamic_polymorphism main.cpp functions.h quadric_function.h quadric_function.cpp linear_function.h linear_function.cpp sinus.h sinus.cpp cosinus.h cosinus.cpp constant_function.h constant_function.cpp)
#target_link_libraries(lab-4-dynamic_polymorphism utils_static)